Elimina lambdas y genericos en controllers/services/repos